--- a/rest_framework/locale/de/LC_MESSAGES/django.po
+++ b/rest_framework/locale/de/LC_MESSAGES/django.po
@@ -98,7 +98,7 @@ msgstr "Benutzerkonto ist gesperrt."
 
 #: authtoken/serializers.py:23
 msgid "Unable to log in with provided credentials."
-msgstr "Kann nicht mit den angegeben Zugangsdaten anmelden."
+msgstr "Die angegeben Zugangsdaten stimmen nicht."
 
 #: authtoken/serializers.py:26
 msgid "Must include \"username\" and \"password\"."
@@ -122,7 +122,7 @@ msgstr "Anmeldedaten fehlen."
 
 #: exceptions.py:99
 msgid "You do not have permission to perform this action."
-msgstr "Sie sind nicht berechtigt, diese Aktion durchzuführen."
+msgstr "Sie sind nicht berechtigt diese Aktion durchzuführen."
 
 #: exceptions.py:104 views.py:81
 msgid "Not found."
@@ -151,7 +151,7 @@ msgstr "Dieses Feld ist erforderlich."
 
 #: fields.py:270
 msgid "This field may not be null."
-msgstr "Dieses Feld darf nicht Null sein."
+msgstr "Dieses Feld darf nicht null sein."
 
 #: fields.py:608 fields.py:639
 msgid "\"{input}\" is not a valid boolean."
@@ -193,7 +193,7 @@ msgstr "\"{value}\" ist keine gültige UUID."
 
 #: fields.py:796
 msgid "Enter a valid IPv4 or IPv6 address."
-msgstr "Geben Sie eine gültige UPv4 oder IPv6 Adresse an"
+msgstr "Gib eine gültige IPv4 oder IPv6 Adresse an"
 
 #: fields.py:821
 msgid "A valid integer is required."
@@ -272,7 +272,7 @@ msgstr "Diese Auswahl darf nicht leer sein"
 
 #: fields.py:1339
 msgid "\"{input}\" is not a valid path choice."
-msgstr "\"{input}\" ist ein ungültiger Pfad Wahl."
+msgstr "\"{input}\" ist ein ungültiger Pfad."
 
 #: fields.py:1358
 msgid "No file was submitted."
@@ -308,7 +308,7 @@ msgstr "Diese Liste darf nicht leer sein."
 
 #: fields.py:1502
 msgid "Expected a dictionary of items but got type \"{input_type}\"."
-msgstr "Erwarte ein Dictionary mit Elementen, erhielt aber den Typ \"{input_type}\"."
+msgstr "Erwartete ein Dictionary mit Elementen, erhielt aber den Typ \"{input_type}\"."
 
 #: fields.py:1549
 msgid "Value must be valid JSON."
@@ -320,15 +320,15 @@ msgstr "Abschicken"
 
 #: filters.py:336
 msgid "ascending"
-msgstr ""
+msgstr "aufsteigend"
 
 #: filters.py:337
 msgid "descending"
-msgstr ""
+msgstr "absteigend"
 
 #: pagination.py:193
 msgid "Invalid page."
-msgstr ""
+msgstr "Ungültige Seite."
 
 #: pagination.py:427
 msgid "Invalid cursor"
@@ -430,7 +430,7 @@ msgstr "Ungültige Version im URL Pfad."
 
 #: versioning.py:115
 msgid "Invalid version in URL path. Does not match any version namespace."
-msgstr ""
+msgstr "Ungültige Version in der URL. Stimmt mit keinem Versions-Namespace überein."
 
 #: versioning.py:147
 msgid "Invalid version in hostname."
