--- a/docs/topics/3.6-announcement.md
+++ b/docs/topics/3.6-announcement.md
@@ -147,15 +147,13 @@ For more information see the [Python client library documentation][py-docs].
 
 ### DjangoFilterBackend
 
-The functionality of the built-in `DjangoFilterBackend` is now completely
-included by the `django-filter` package.
+The 3.5 "pending deprecation" warning of the built-in `DjangoFilterBackend` has now
+been escalated to a "deprecated" warning.
 
 You should change your imports and REST framework filter settings as follows:
 
 * `rest_framework.filters.DjangoFilterBackend` becomes `django_filters.rest_framework.DjangoFilterBackend`.
 * `rest_framework.filters.FilterSet` becomes `django_filters.rest_framework.FilterSet`.
-
-The existing imports will continue to work but are now pending deprecation.
 
 ---
 
