Placeholder for DefaultRouter schema argument deprecations

--- a/docs/topics/3.6-announcement.md
+++ b/docs/topics/3.6-announcement.md
@@ -145,6 +145,10 @@ For more information see the [Python client library documentation][py-docs].
 
 ## Deprecations
 
+### DefaultRouter schema arguments
+
+**TODO**
+
 ### DjangoFilterBackend
 
 The 3.5 "pending deprecation" warning of the built-in `DjangoFilterBackend` has now
