--- a/docs/topics/3.6-announcement.md
+++ b/docs/topics/3.6-announcement.md
@@ -145,9 +145,12 @@ For more information see the [Python client library documentation][py-docs].
 
 ## Deprecations
 
-### DefaultRouter schema arguments
+### Generating schemas from Router
 
-**TODO**
+The 3.5 "pending deprecation" of router arguments for generating a schema view, such as `schema_title`, `schema_url` and `schema_renderers`, have now been escalated to a
+"deprecated" warning.
+
+Instead of using DefaultRouter(schema_title='Example API'), you should use the get_schema_view() function, and include the view explicitly in your URL conf.
 
 ### DjangoFilterBackend
 
