--- a/docs/topics/3.6-announcement.md
+++ b/docs/topics/3.6-announcement.md
@@ -24,7 +24,7 @@ The 3.6 release adds two major new features to REST framework.
 1. Built-in interactive API documentation support.
 2. A new JavaScript client&nbsp;library.
 
-**TODO: Insert image**
+![API Documentation](/img/api-docs.gif)
 
 *Above: The interactive API documentation.*
 
@@ -74,13 +74,15 @@ To install the API documentation, you'll need to include it in your projects URL
 
 Once installed you should see something a little like this:
 
-**TODO: Image**
+![API Documentation](/img/api-docs.png)
 
 We'll likely be making further refinements to the API documentation over the
 coming weeks. Keep in mind that this is a new feature, and please do give
 us feedback if you run into any issues or limitations.
 
 For more information on documenting your API endpoints see the ["Documenting your API"][api-docs] section.
+
+---
 
 ## JavaScript client library
 
@@ -150,7 +152,7 @@ For more information see the [Python client library documentation][py-docs].
 The 3.5 "pending deprecation" of router arguments for generating a schema view, such as `schema_title`, `schema_url` and `schema_renderers`, have now been escalated to a
 "deprecated" warning.
 
-Instead of using DefaultRouter(schema_title='Example API'), you should use the get_schema_view() function, and include the view explicitly in your URL conf.
+Instead of using `DefaultRouter(schema_title='Example API')`, you should use the `get_schema_view()` function, and include the view explicitly in your URL conf.
 
 ### DjangoFilterBackend
 
