--- a/docs/topics/3.6-announcement.md
+++ b/docs/topics/3.6-announcement.md
@@ -104,8 +104,8 @@ Here's a brief example that demonstrates:
 
     <html>
         <head>
-            <script src="/static/rest_framework/js/coreapi-0.1.0.js"></script>
-            <script src="/docs/schema.js' %}"></script>
+            <script src="{% static 'js/coreapi-0.1.0.js' %}"></script>
+            <script src="{% static 'docs/js/schema.js'%}"></script>
             <script>
                 const coreapi = window.coreapi
                 const schema = window.schema
