--- a/docs/topics/3.6-announcement.md
+++ b/docs/topics/3.6-announcement.md
@@ -101,7 +101,7 @@ Here's a brief example that demonstrates:
 * Making an API request using the client.
 
 **index.html**
-    {% load staticfiles %}
+    {% load static %}
     <html>
         <head>
             <script src="{% static 'js/coreapi-0.1.0.js' %}"></script>
