--- a/docs/topics/3.8-announcement.md
+++ b/docs/topics/3.8-announcement.md
@@ -87,9 +87,11 @@ for a complete listing.
 
 ## What's next
 
-TODO
+We're currently working towards moving to using [OpenAPI][openapi] as our default schema output. We'll also be revisiting our API documentation generation and client libraries.
+
+We're doing some consolidation in order to make this happen. It's planned that 3.9 will drop the `coreapi` and `coreschema` libraries, and instead use `apistar` for  the API documentation generation, schema generation, and API client libraries.
 
 [funding]: funding.md
 [gh5886]: https://github.com/encode/django-rest-framework/issues/5886
 [gh5705]: https://github.com/encode/django-rest-framework/issues/5705
-
+[openapi]: https://www.openapis.org/
