Add announcement section for Extra Actions in Browsable API

--- a/docs/community/3.9-announcement.md
+++ b/docs/community/3.9-announcement.md
@@ -28,17 +28,25 @@ The 3.9 release gives access to _extra actions_ in the Browsable API, introduces
 If you use REST framework commercially and would like to see this work continue, we strongly encourage you to invest in its continued development by
 **[signing up for a paid&nbsp;plan][funding]**.
 
+
+TODO: UPDATE SPONSORS.
+
 *We'd like to say thanks in particular our premium backers, [Rover](http://jobs.rover.com/), [Sentry](https://getsentry.com/welcome/), [Stream](https://getstream.io/?utm_source=drf&utm_medium=banner&utm_campaign=drf), [Machinalis](https://hello.machinalis.co.uk/), and [Rollbar](https://rollbar.com).*
 
 ---
 
-TODO: HEADLINE FEATURES. 1, 2, 3.
+## ViewSet _Extra Actions_ available in the Browsable API
 
----
+Following the introduction of the `action` decorator in v3.8, _extra actions_ defined on a ViewSet are now available
+from the Browsable API.
 
-## Breaking Changes
+![Extra Actions displayed in the Browsable API](https://user-images.githubusercontent.com/2370209/32976956-1ca9ab7e-cbf1-11e7-981a-a20cb1e83d63.png)
 
-TODO... (NONE???)
+When defined, a dropdown of "Extra Actions", appropriately filtered to detail/non-detail actions, is displayed.
+
+## In-built OpenAPI schema support
+
+TODO
 
 ---
 
