Update release notes and add deprecation note for Django Guardian backend.

--- a/docs/community/3.9-announcement.md
+++ b/docs/community/3.9-announcement.md
@@ -52,6 +52,13 @@ TODO
 
 ## Deprecations
 
+### `DjangoObjectPermissionsFilter` moved to third-party package.
+
+The `DjangoObjectPermissionsFilter` class is pending deprecation, will be deprecated in 3.10 and removed entirely in 3.11.
+
+It has been moved to the third-party [`djangorestframework-guardian`](https://github.com/rpkilby/django-rest-framework-guardian)
+package. Please use this instead.
+
 ### Router argument/method renamed to use `basename` for consistency.
 
 * The `Router.register` `base_name` argument has been renamed in favor of `basename`.
